# AgenticAI

./: .gitignore
Hackthon/Backend/: .env  Dockerfile  credentials.json  package.json  requiremnets.txt  server.js
Hackthon/Backend/agents/: analysis_agent_test.py  ingestion_structuring_agent.py
Hackthon/Backend/myenv/: pyvenv.cfg
Hackthon/Backend/tools/: __init__.py  email_extraction_tool.py  financial_analysis_tool.py  processing_tool.py  web_search_tool.py
Hackthon/Frontend/startup-evaluation/: package-lock.json  package.json
Hackthon/Frontend/startup-evaluation/src/: App.js  index.js
Hackthon/Frontend/startup-evaluation/src/Components/: StartupQuestionnaire.js  startupdocumentanalyzer.js
crewai_training/first_proj/: README.md  pyproject.toml  report.md
crewai_training/first_proj/src/first_proj/: agents.py  crew.py  main.py  tasks.py
crewai_training/first_proj/src/first_proj/tools/: budget_tool.py  maps_tool.py  scrape_tool.py  search_tool.py  weather_tool.py
crewai_training2/sec_proj/: README.md  pyproject.toml
crewai_training2/sec_proj/src/sec_proj/: crew.py  main.py
