[project]
name = "first_proj"
version = "0.1.0"
description = "first_proj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
first_proj = "first_proj.main:run"
run_crew = "first_proj.main:run"
train = "first_proj.main:train"
replay = "first_proj.main:replay"
test = "first_proj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
